--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "@emailjs/browser": "^4.4.1",
+    "audit": "^0.0.6",
+    "react": "^0.0.0-experimental-18eaf51b-20250118",
+    "react-dom": "^0.0.0-experimental-18eaf51b-20250118",
     "react-router": "^7.1.1"
   },
   "devDependencies": {
